force-app/main/default/objects/Contact_Role__c/Contact_Role__c.object-meta.xml
<CustomObject>
    <description>TOOLKIT: Used to connect a Contact to their Assigned Role for a particular Item. Can currently be assigned at the Project / Release Level, the Capability Level, and the Requirement Level</description>
    <label>Contact Role</label>
    <nameField>
        <displayFormat>ConR-{00000000}</displayFormat>
        <label>Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>