force-app/main/default/objects/Contact_Role__c/fields/Capability__c.field-meta.xml
<CustomField>
    <fullName>Capability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capability</label>
    <referenceTo>Capability__c</referenceTo>
    <relationshipLabel>Contact Roles</relationshipLabel>
    <relationshipName>Contact_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>