force-app/main/default/objects/Contact_Role__c/fields/Related_Item__c.field-meta.xml
<CustomField>
    <fullName>Related_Item__c</fullName>
    <formula>IF ( CONTAINS(  RecordType.DeveloperName, &quot;Release&quot;), 
 HYPERLINK( Release__c ,   Release__r.Name   , &quot;_self&quot;) 
,


IF ( CONTAINS(  RecordType.DeveloperName, &quot;Capability&quot;), 
 HYPERLINK(  Capability__c ,  Capability__r.Name, &quot;_self&quot;) 
, 


IF ( CONTAINS(  RecordType.DeveloperName, &quot;Request&quot;), 
 HYPERLINK( Request__c ,    Request__r.Name   , &quot;_self&quot;) 
,
&quot;none&quot;

)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Item</label>
    <type>Text</type>
</CustomField>