force-app/main/default/objects/Contact_Role__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Contact Roles</relationshipLabel>
    <relationshipName>Contact_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>