force-app/main/default/objects/Contact_Role__c/fields/Role_Details__c.field-meta.xml
<CustomField>
    <fullName>Role_Details__c</fullName>
    <formula>Role_Responsibility__r.Definition__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role Details</label>
    <type>Text</type>
</CustomField>