force-app/main/default/objects/Contact_Role__c/fields/Role_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Role_Responsibility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connects a Contact to their assigned Role as it relates to a Release, Capability, or Request</description>
    <inlineHelpText>Connects a Contact to their assigned Role as it relates to a Release, Capability, or Request</inlineHelpText>
    <label>Role &amp; Responsibility</label>
    <referenceTo>Glossary_Item__c</referenceTo>
    <relationshipLabel>Contact Roles</relationshipLabel>
    <relationshipName>Contact_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>