force-app/main/default/objects/Contact_Role__c/recordTypes/Capability_Role.recordType-meta.xml
<RecordType>
    <fullName>Capability_Role</fullName>
    <active>true</active>
    <description>Assigns a Contact a Role on a Capability</description>
    <label>Capability Role</label>
</RecordType>