force-app/main/default/objects/Contact_Role__c/recordTypes/Release_Role.recordType-meta.xml
<RecordType>
    <fullName>Release_Role</fullName>
    <active>true</active>
    <description>Assigns a Contact a Role on a Request</description>
    <label>Release Role</label>
</RecordType>