force-app/main/default/objects/Contact_Role__c/recordTypes/Request_Role.recordType-meta.xml
<RecordType>
    <fullName>Request_Role</fullName>
    <active>true</active>
    <description>Assigns a Contact a Role on a Request</description>
    <label>Request Role</label>
</RecordType>